[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/globals/ending.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/ColorRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending4.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending5.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending6.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending7.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending8.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending9.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending10.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending11.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending12.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending13.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/ending/ending_animation/ending14.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/ending/final2.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/ending/final.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/ashooterpixelfon.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/sounds/sfx/11_prefinalexplosion.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sounds/sfx/12_finalexplosion.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sounds/ost/gameover.wav" type="AudioStream" id=22]

[sub_resource type="Animation" id=1]
resource_name = "dd"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.0588235, 0.219608, 0.0588235, 1 ), Color( 0.188235, 0.384314, 0.188235, 1 ), Color( 0.545098, 0.67451, 0.0588235, 1 ), Color( 0.607843, 0.737255, 0.0588235, 1 ), Color( 0.792157, 0.862745, 0.623529, 1 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
extra_spacing_bottom = -4
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 19 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" parent="." instance=ExtResource( 2 )]
editor/display_folded = false
visible = true
color = Color( 0.792157, 0.862745, 0.623529, 1 )

[node name="AnimationPlayer" parent="ColorRect" index="0"]
autoplay = "dd (copy)"
"anims/dd (copy)" = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
centered = false

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 43, 72 )
frames = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = 111.0
margin_right = 321.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "FINALY, HUMANITY CAN FIND
A MOMENTARY PEACE"

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = 111.0
margin_right = 321.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "BUT I AM READY FOR THE
NEXT MISSION!!"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 30.0
margin_top = 63.0
margin_right = 194.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "A GAME CREATED BY
   RAUL LESSA"

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = 57.0
margin_right = 150.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "SPECIAL THANKS TO ALL
GODOT DEVELOPERS AND THE
AMAZING GODOT COMMUNITY"

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 13.0
margin_top = 63.0
margin_right = 148.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "YOUR SCORE  "

[node name="Label6" type="Label" parent="."]
visible = false
margin_left = 97.0
margin_top = 63.0
margin_right = 232.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "0"

[node name="Timer3" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -18.909
autoplay = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="final_explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -21.011

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -13.657
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]

[editable path="ColorRect"]
